[build-system]
requires = ["setuptools>69", "setuptools-scm>8"]
build-backend = "setuptools.build_meta"
[project]
name = "REVHubInterface"
dynamic = ["dependencies", "version"]
description = "GUI program for manual control of REV Robotics Expansion Hub from a PC. Unofficial \"Community Edition\". "
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["REV", "Expansion Hub", "Hub Interface"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
]
[project.urls]
Homepage = "https://unofficialrevport.org"
Repository = "https://github.com/unofficial-rev-port/REVHubInterface.git"
Issues = "https://github.com/unofficial-rev-port/REVHubInterface/issues"
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
[tool.setuptools]
packages = ["REVHubInterface"]
[tool.setuptools.package-data]
REVHubInterface = ["org.unofficialrevport.REVHubInterface.png","org.unofficialrevport.REVHubInterface.Devel.png"]
[project.gui-scripts]
revhubinterface = "REVHubInterface.__main__:initwindow"
[tool.setuptools_scm]
local_scheme = "no-local-version"
version_file = "REVHubInterface/_version.py"
